# django-graphql

./: .in  README.md  initial_data.json  pyproject.toml
django_graphql/: manage.py
django_graphql/django_graphql/: asgi.py  urls.py  wsgi.py
django_graphql/django_graphql/settings/: base.py
